--- a/Goudkoorts/Goudkoorts.csproj
+++ b/Goudkoorts/Goudkoorts.csproj
@@ -43,16 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controller\Program.cs" />
+    <Compile Include="Model\DockTrack.cs" />
+    <Compile Include="Model\Game.cs" />
+    <Compile Include="Model\MarshallingTrack.cs" />
+    <Compile Include="Model\Minecart.cs" />
+    <Compile Include="Model\NormalTrack.cs" />
+    <Compile Include="Model\Ship.cs" />
+    <Compile Include="Model\SwitchTrack.cs" />
+    <Compile Include="Model\Track.cs" />
+    <Compile Include="Model\Warehouse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\InputView.cs" />
+    <Compile Include="View\OutputView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="View\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
